--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       SECRET_KEY: ${SECRET_KEY}
     ports:
       - "8000:8000"
+    command: >
+      sh -c "alembic upgrade head && uvicorn main:app --host 0.0.0.0 --port 8000"
 
 volumes:
   pgdata:
